Quote CNC on the rights handled by ADAGP

--- a/src/bibliography.yml
+++ b/src/bibliography.yml
@@ -152,3 +152,10 @@ adagp-presentation:
   title: Présentation générale de l'ADAGP
   author: ADAGP
   url: https://www.adagp.fr/fr/role-et-missions-de-ladagp/presentation-generale-de-ladagp
+
+cnc-sprd:
+  type: Web
+  title: "Ressources auteurs : législation et droits d'auteur : principales sociétés civiles de perception et de répartition des droits"
+  author: CNC
+  url: https://www.cnc.fr/professionnels/jeunes-professionnels/ressources-auteurs/legislation-et-droits-d-auteur/principales-societes-civiles-de-perception-et-de-repartition-des-droits
+  date: 2009-06-23
