--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,6 +4,8 @@ on:
   push:
     tags: [ "v*.*.*" ]
     branches: [ master ]
+  pull_request:
+    branches: [ master ]
   
 
 jobs:
@@ -27,7 +29,7 @@ jobs:
   publish:
     needs: build
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/v')
+    if: github.event_name == 'push' && github.ref == 'refs/heads/master'
     steps:
     - uses: actions/checkout@v3
     - name: Is tag on master HEAD?
